--- a/package.json
+++ b/package.json
@@ -13,40 +13,37 @@
   },
   "dependencies": {
     "@expo/samples": "~36.0.0",
-    "@expo/vector-icons": "~10.2.0",
-    "@react-native-community/masked-view": "0.1.5",
+    "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.1.0",
     "@react-navigation/material-bottom-tabs": "^5.1.0",
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "axios": "^0.19.2",
-    "expo": "~36.0.0",
-    "expo-asset": "~8.0.0",
-    "expo-barcode-scanner": "~8.0.0",
-    "expo-constants": "~8.0.0",
-    "expo-font": "~8.0.0",
+    "expo": "^39.0.0",
+    "expo-asset": "~8.2.0",
+    "expo-barcode-scanner": "~9.0.0",
+    "expo-constants": "~9.2.0",
+    "expo-font": "~8.3.0",
     "expo-google-app-auth": "^8.0.1",
-    "expo-web-browser": "~8.0.0",
-    "firebase": "^7.19.1",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "expo-web-browser": "~8.5.0",
+    "firebase": "7.9.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
     "react-native-elements": "^2.3.2",
-    "react-native-gesture-handler": "~1.5.0",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-paper": "^3.6.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
-    "react-native-web": "~0.11.7",
-    "react-navigation": "~4.0.10",
-    "react-navigation-stack": "~1.10.3",
-    "react-navigation-tabs": "~2.6.2"
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
+    "react-native-web": "~0.13.7"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "~8.0.0",
-    "jest-expo": "~36.0.1",
+    "babel-preset-expo": "^8.3.0",
+    "jest-expo": "^39.0.0",
     "prettier": "1.19.1"
   },
   "private": true
