--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "axios": "^0.19.2",
     "expo": "^39.0.0",
     "expo-asset": "~8.2.0",
-    "expo-barcode-scanner": "~9.0.0",
     "expo-constants": "~9.2.0",
     "expo-font": "~8.3.0",
     "expo-google-app-auth": "^8.0.1",
@@ -39,7 +38,8 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.7"
+    "react-native-web": "~0.13.7",
+    "expo-camera": "~9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
