--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "axios": "^0.19.2",
     "expo": "^39.0.0",
     "expo-asset": "~8.2.0",
+    "expo-camera": "~9.0.0",
     "expo-constants": "~9.2.0",
     "expo-font": "~8.3.0",
     "expo-google-app-auth": "^8.0.1",
     "expo-web-browser": "~8.5.0",
     "firebase": "7.9.0",
+    "formik": "^2.2.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
@@ -38,8 +40,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.7",
-    "expo-camera": "~9.0.0"
+    "react-native-web": "~0.13.7"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
