--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/web": "~1.0.0-alpha.9",
     "axios": "^0.19.2",
     "expo": "^39.0.0",
+    "expo-ads-admob": "~8.3.0",
     "expo-asset": "~8.2.0",
     "expo-camera": "~9.0.0",
     "expo-constants": "~9.2.0",
