--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
