--- a/app.json
+++ b/app.json
@@ -3,12 +3,8 @@
     "name": "Vinkjeller",
     "slug": "Vinkjeller",
     "privacy": "public",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
-    "version": "1.0.0",
+    "platforms": ["ios", "android", "web"],
+    "version": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/images/vinkjeller-icon.png",
     "splash": {
@@ -19,19 +15,21 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "bundleIdentifier": "com.vinkjeller.vinkjeller",
-      "buildNumber": "3.0.0"
+      "bundleIdentifier": "app.vinkjeller.vinkjeller",
+      "buildNumber": "1.0.0"
     },
     "android": {
-      "package": "com.vinkjeller.vinkjeller",
+      "package": "app.vinkjeller.vinkjeller",
       "versionCode": 3,
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/vinkjeller-icon.png"
+      },
       "config": {
         "googleMobileAdsAppId": "ca-app-pub-6480465457652082~7181826497"
-      }
+      },
+      "permissions": ["CAMERA"]
     },
     "description": ""
   }
