--- a/app.json
+++ b/app.json
@@ -6,11 +6,10 @@
     "platforms": ["ios", "android", "web"],
     "version": "1.1.0",
     "orientation": "portrait",
-    "icon": "./assets/images/vinkjeller-icon.png",
+    "icon": "./assets/images/ikon.png",
     "splash": {
       "image": "./assets/images/vinkjeller-splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "resizeMode": "contain"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -22,14 +21,14 @@
     },
     "android": {
       "package": "app.vinkjeller.vinkjeller",
-      "versionCode": 4,
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/vinkjeller-icon.png"
-      },
+      "versionCode": 18,
       "config": {
         "googleMobileAdsAppId": "ca-app-pub-6480465457652082~7181826497"
       },
-      "permissions": ["CAMERA"]
+      "permissions": ["CAMERA"],
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/ikon.png"
+      }
     },
     "description": ""
   }
