--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@expo/samples": "~36.0.0",
-    "@expo/vector-icons": "^10.0.0",
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "^1.15.8",
     "@react-native-community/checkbox": "^0.5.5",
     "@react-native-community/masked-view": "0.1.10",
@@ -23,34 +23,34 @@
     "@react-navigation/stack": "^5.1.0",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "axios": "^0.19.2",
-    "expo": "^39.0.0",
-    "expo-ads-admob": "~8.3.0",
-    "expo-asset": "~8.2.0",
-    "expo-camera": "~9.0.0",
-    "expo-constants": "~9.2.0",
-    "expo-font": "~8.3.0",
+    "expo": "^40.0.0",
+    "expo-ads-admob": "~8.4.0",
+    "expo-asset": "~8.2.1",
+    "expo-camera": "~9.1.0",
+    "expo-constants": "~9.3.3",
+    "expo-font": "~8.4.0",
     "expo-google-app-auth": "^8.0.1",
-    "expo-web-browser": "~8.5.0",
+    "expo-web-browser": "~8.6.0",
     "firebase": "7.9.0",
     "formik": "^2.2.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-dotenv": "^2.5.5",
     "react-native-elements": "^2.3.2",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.7"
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "babel-preset-expo": "^8.3.0",
-    "jest-expo": "^39.0.0",
+    "@babel/core": "~7.9.0",
+    "babel-preset-expo": "8.3.0",
+    "jest-expo": "^40.0.0",
     "prettier": "1.19.1"
   },
   "private": true
