--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@expo/samples": "~36.0.0",
     "@expo/vector-icons": "^12.0.0",
-    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/checkbox": "^0.5.5",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.1.0",
@@ -23,34 +23,34 @@
     "@react-navigation/stack": "^5.1.0",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "axios": "^0.19.2",
-    "expo": "^41.0.0",
-    "expo-ads-admob": "~10.0.4",
-    "expo-asset": "~8.3.1",
-    "expo-camera": "~11.0.2",
-    "expo-constants": "~10.1.3",
-    "expo-font": "~9.1.0",
-    "expo-google-app-auth": "^8.0.1",
-    "expo-web-browser": "~9.1.0",
+    "expo": "^42.0.0",
+    "expo-ads-admob": "~10.1.2",
+    "expo-asset": "~8.3.3",
+    "expo-camera": "~11.2.2",
+    "expo-constants": "~11.0.1",
+    "expo-font": "~9.2.1",
+    "expo-google-app-auth": "~8.2.5",
+    "expo-web-browser": "~9.2.0",
     "firebase": "8.2.3",
     "formik": "^2.2.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-dotenv": "^2.5.5",
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-paper": "^3.6.0",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
+    "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "babel-preset-expo": "8.3.0",
-    "jest-expo": "^41.0.0",
+    "jest-expo": "^42.0.0",
     "prettier": "1.19.1"
   },
   "private": true
