--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@react-navigation/stack": "^5.1.0",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "axios": "^0.19.2",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "expo": "^43.0.0",
     "expo-ads-admob": "~11.0.3",
     "expo-asset": "~8.4.3",
     "expo-camera": "~12.0.3",
     "expo-constants": "~12.1.3",
+    "expo-dev-client": "~0.6.3",
     "expo-font": "~10.0.3",
     "expo-google-app-auth": "~9.0.0",
     "expo-web-browser": "~10.0.3",
@@ -36,7 +38,6 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-app-intro-slider": "^4.0.4",
-    "react-native-dotenv": "^2.5.5",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-markdown-display": "^7.0.0-alpha.2",
