Rettet feil ifm. release av iOS-versjon. Gjorde release av v2.0.0 til iOS

--- a/eas.json
+++ b/eas.json
@@ -25,6 +25,11 @@
       "android": {
         "buildType": "apk"
       }
+    },
+    "iosTest": {
+      "ios": {
+        "simulator": true
+      }
     }
   },
   "submit": {
