--- a/app.json
+++ b/app.json
@@ -17,7 +17,13 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "bundleIdentifier": "app.vinkjeller.vinkjeller",
-      "buildNumber": "1.0.0"
+      "buildNumber": "2.0.0",
+      "config": {
+        "googleMobileAdsAppId": "ca-app-pub-6480465457652082~7181826497"
+      },
+      "infoPlist": {
+        "NSCameraUsageDescription": "This app uses the camera to scan barcodes on wine bottles."
+      }
     },
     "android": {
       "package": "app.vinkjeller.vinkjeller",
