--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "platforms": ["ios", "android", "web"],
     "version": "1.2.0",
     "orientation": "portrait",
-    "icon": "./assets/images/ikon.png",
+    "icon": "./assets/images/ikon-ios.png",
     "splash": {
       "image": "./assets/images/vinkjeller-splash.png",
       "resizeMode": "contain"
@@ -17,7 +17,7 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "bundleIdentifier": "app.vinkjeller.vinkjeller",
-      "buildNumber": "3.0.0",
+      "buildNumber": "4.0.0",
       "config": {
         "googleMobileAdsAppId": "ca-app-pub-6480465457652082~7181826497"
       },
