--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
         "googleMobileAdsAppId": "ca-app-pub-6480465457652082~7181826497"
       },
       "infoPlist": {
-        "NSCameraUsageDescription": "This app uses the camera to scan barcodes on wine bottles."
+        "NSCameraUsageDescription": "This app uses the camera to scan barcodes on wine bottles.",
+        "NSUserTrackingUsageDescription": "Denne identifikatoren vil brukes til å levere personlig reklame til deg."
       }
     },
     "android": {
