--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
     "expo-status-bar": "~1.1.0",
-    "expo-barcode-scanner": "~11.1.2"
+    "expo-barcode-scanner": "~11.1.2",
+    "expo-tracking-transparency": "~2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
