#85: Lokaliserte appen og la til ny app i AdMob. Tilpasset visning av ads så riktig ID brukes per platform

--- a/app.json
+++ b/app.json
@@ -22,8 +22,7 @@
         "googleMobileAdsAppId": "ca-app-pub-6480465457652082~7181826497"
       },
       "infoPlist": {
-        "NSCameraUsageDescription": "This app uses the camera to scan barcodes on wine bottles.",
-        "NSUserTrackingUsageDescription": "Denne identifikatoren vil brukes til å levere personlig reklame til deg."
+        "CFBundleAllowMixedLocalizations": true
       }
     },
     "android": {
@@ -37,6 +36,10 @@
         "foregroundImage": "./assets/images/ikon.png"
       },
       "googleServicesFile": "./google-services.json"
+    },
+    "locales": {
+      "no": "./spraak/norsk.json",
+      "en": "./spraak/engelsk.json"
     },
     "description": ""
   }
